--- a/views/action.erb
+++ b/views/action.erb
@@ -1,5 +1,5 @@
 <% if @action %>
-  <h1><%= @player_1.name %> <%= @action %> <%= @player_2.name %></h1>
+  <h1><%= @attacker.name %> <%= @action %> <%= @defender.name %></h1>
 <% end %>
 
 <form action="/play" method="get">
