--- a/views/play.erb
+++ b/views/play.erb
@@ -1,7 +1,12 @@
 <h1><%= @player_1.name %> vs. <%= @player_2.name %></h1>
 <div>
+<%= @player_1.name %>: <%= @player_1.health %>hp
+</div>
+<div>
 <%= @player_2.name %>: <%= @player_2.health %>hp
 </div>
+
+<h2><%= $game.attacker.name %>'s turn</h2>
 
 <form action="/action" method="post">
   <input type="radio" name="attack" value="Attack">
